Fixed small issue with the panels not lining up next to eachother, the connect with me section was not in the same row. Thanks to Sherwin.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<div class="row">
 
 			<!-- About Me Section -->
-			<div class="col-xs-12 col-md-8">
+			<div class="col-md-8">
 				<div class="panel panel-default">
 
 					<div class="panel-heading">
@@ -74,10 +74,8 @@
 
 				</div>
 			</div>
-		</div>
-			
 			<!-- Connect With Me Section -->
-			<div class="col-xs-12 col-md-4">
+			<div class="col-md-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h4>Connect With Me</h4>
@@ -101,6 +99,8 @@
 					</div>
 				</div>
 			</div>	
+		</div>
+			
 	</div>
 
 
