--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-<!-- Bootstrap 3Nav Bar -->
+<!-- Bootstrap 3 Nav Bar -->
 	<nav class="navbar navbar-default">
 		<div class="container">
 
@@ -55,7 +55,7 @@
 		<div class="row">
 
 			<!-- About Me Section -->
-			<div class="col-md-8">
+			<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
 				<div class="panel panel-default">
 
 					<div class="panel-heading">
@@ -63,19 +63,25 @@
 					</div>
 
 					<div class="panel-body">
-						<img class="thumbnail img-responsive pull-left margin-right profile-full" src="assets/images/melissawolowicz2.jpg" alt="Melissa Wolowicz">
+						<div class="pull-left">
 
-						<p>A native of Venezuela, Melissa’s Latin roots and creative spirit find their way into every aspect of her life, adding distinctive flavor to passions that include cooking, photography, music and traveling.</p>
+							<img class="thumbnail img-responsive" src="assets/images/melissawolowicz2.jpg" alt="Melissa Wolowicz">
+							
+						</div>
+						
+						<div class="pull-right">
+							<p>A native of Venezuela, Melissa’s Latin roots and creative spirit find their way into every aspect of her life, adding distinctive flavor to passions that include cooking, photography, music and traveling.</p>
 
-						<p>A travel fanatic (she even loves airports), Melissa and husband Ray celebrated their 10 year anniversary with an epic New York trip. True to form, she found every artistic point of interest, photographed it all, and grabbed a nerdy highlight posing outside Rockefeller Center, home of fav TV show 30Rock.</p>
+							<p>A travel fanatic (she even loves airports), Melissa and husband Ray celebrated their 10 year anniversary with an epic New York trip. True to form, she found every artistic point of interest, photographed it all, and grabbed a nerdy highlight posing outside Rockefeller Center, home of fav TV show 30Rock.</p>
 
-						<p>As 30Rock heroine Liz Lemon might say, “Ain’t no party like a Melissa party!”</p>
+							<p>As 30Rock heroine Liz Lemon might say, “Ain’t no party like a Melissa party!”</p>
+						</div>
 					</div>
-
 				</div>
 			</div>
+
 			<!-- Connect With Me Section -->
-			<div class="col-md-4">
+			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h4>Connect With Me</h4>
@@ -99,8 +105,7 @@
 					</div>
 				</div>
 			</div>	
-		</div>
-			
+		</div>	
 	</div>
 
 
