--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-		<!-- Optional Sticky Footer -->
-		<link rel="stylesheet" href="http://getbootstrap.com/docs/3.3/examples/sticky-footer/sticky-footer.css">
+	<!-- Linking Google Font Lobster for MW's logo -->
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
 	<!-- Linking my own CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -36,14 +36,14 @@
 		<div class="container">
 
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html">Melissa Wolowicz</a>
+				<a class="navbar-brand" id=logo href="index.html">Melissa Wolowicz</a>
 			</div>
 			
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html">About</a></li>
+				<ul class="nav navbar-nav navbar-right" id="navLinks">
+					<li><a href="index.html" style="border: none;">About</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="contact.html" style="padding-right: 0px">Contact</a></li>
 				</ul>
 			</div>
 
