--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 				<div class="panel panel-default">
 
 					<div class="panel-heading">
-						<h3>About Me</h3>
+						<h1>About Me</h1>
 					</div>
 
 					<div class="panel-body">
 						<div class="pull-left">
 
-							<img class="thumbnail img-responsive" src="assets/images/melissawolowicz2.jpg" alt="Melissa Wolowicz">
+							<img class="img-responsive" src="assets/images/melissawolowicz2.jpg" alt="Melissa Wolowicz">
 							
 						</div>
 						
@@ -84,7 +84,7 @@
 			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<h4>Connect With Me</h4>
+						<h3>Connect With Me</h3>
 					</div>
 
 					<div class="panel-body">
