--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
 	</nav>
 
 <!-- Main Content -->
-	<div class="container">
+	<div class="container" id="marginFix">
 		<div class="row">
 
 			<!-- Portfolio Section -->
@@ -118,33 +118,23 @@
 					</div>
 
 					<div class="panel-body">
+						<div>
+							<a href="https://github.com/m-wolowicz" target="_blank"><img src="assets/images/github.svg" id="git" alt="GitHub"></a>
 
-						<!-- I'm using a Sub-Row Here -->
-						<div class="row">
-							<a href="https://github.com/m-wolowicz" target="_blank">
-								<img src="assets/images/github.svg" class="col-xs-2 col-md-3" id="git" alt="GitHub">
-							</a>
-							<a href="https://www.linkedin.com/in/mwolowicz/" target="_blank">
-								<img src="assets/images/linkedin.svg" class="col-xs-2 col-md-3" id="linked" alt="LinkedIn">
-							</a>
-							<a href="https://stackoverflow.com/users/8768790/mwolowicz" target="_blank">
-								<img src="assets/images/stackoverflow.svg" class="col-xs-2 col-md-3" id="stack" alt="Stack Overflow">
-							</a>
+							<a href="https://www.linkedin.com/in/mwolowicz/" target="_blank"><img src="assets/images/linkedin.svg" id="linked" alt="LinkedIn"></a>
+
+							<a href="https://stackoverflow.com/users/8768790/mwolowicz" target="_blank"><img src="assets/images/stackoverflow.svg" id="stack" alt="Stack Overflow"></a>							
 						</div>
-
 					</div>
 				</div>
 			</div>	
 		</div>	
 	</div>
 
-
 <!-- Sticky Footer -->
 	<footer class="footer">
-      <div class="container">
-        <p class="text-muted">&copy; Copyright 2017 Melissa Wolowicz</p>
-      </div>
-    </footer>
+		<p id="fooText">&copy; Copyright 2017 Melissa Wolowicz</p>
+	</footer>
 
 </body>
 </html>
