--- a/portfolio.html
+++ b/portfolio.html
@@ -68,14 +68,14 @@
 						<div class="row">
 
 							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-								<a href="#"><img class="img-responsive" src="assets/images/portfolio-image-1.jpg" alt="Project 1"></a>
+								<a href="#"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-1.jpg" alt="Project 1"></a>
 								<div class="caption text-center">
 										<h3>Project 1</h3>										
 								</div>
 							</div>
 
 							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-								<a href="#"><img class="img-responsive" src="assets/images/portfolio-image-2.jpg" alt="Project 2"></a>
+								<a href="#"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-2.jpg" alt="Project 2"></a>
 								<div class="caption text-center">
 										<h3>Project 2</h3>										
 								</div>
@@ -84,14 +84,14 @@
 
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-								<a href="#"><img class="img-responsive" src="assets/images/portfolio-image-3.jpg" alt="Project 3"></a>
+								<a href="#"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-3.jpg" alt="Project 3"></a>
 								<div class="caption text-center">
 										<h3>Project 3</h3>										
 								</div>
 							</div>
 
 							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-								<a href="#"><img class="img-responsive" src="assets/images/portfolio-image-4.jpg" alt="Project 4"></a>
+								<a href="#"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-4.jpg" alt="Project 4"></a>
 								<div class="caption text-center">
 										<h3>Project 4</h3>										
 								</div>
@@ -100,7 +100,7 @@
 
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-								<a href="#"><img class="img-responsive" src="assets/images/portfolio-image-5.jpg" alt="Project 5"></a>
+								<a href="#"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-5.jpg" alt="Project 5"></a>
 								<div class="caption text-center">
 										<h3>Project 5</h3>										
 								</div>
