Added one media query for image on about page, added links to all portfolio projects.

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,41 +68,41 @@
 						<div class="row">
 
 							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-								<a href="#"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-1.jpg" alt="Project 1"></a>
+								<a href="https://www.behance.net/gallery/40282753/AdServicesnet-Rebranding-and-New-Web-Design" target="_blank"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-1.jpg" alt="Project 1"></a>
 								<div class="caption text-center">
-										<h3>Project 1</h3>										
+										<h3>AdServices Web</h3>										
 								</div>
 							</div>
 
 							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-								<a href="#"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-2.jpg" alt="Project 2"></a>
+								<a href="https://www.behance.net/gallery/54606899/TheFusionGroupcom-Web-Design" target="_blank"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-2.jpg" alt="Project 2"></a>
 								<div class="caption text-center">
-										<h3>Project 2</h3>										
-								</div>
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-								<a href="#"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-3.jpg" alt="Project 3"></a>
-								<div class="caption text-center">
-										<h3>Project 3</h3>										
-								</div>
-							</div>
-
-							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-								<a href="#"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-4.jpg" alt="Project 4"></a>
-								<div class="caption text-center">
-										<h3>Project 4</h3>										
+										<h3>Fusion Web</h3>										
 								</div>
 							</div>
 						</div>
 
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-								<a href="#"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-5.jpg" alt="Project 5"></a>
+								<a href="https://www.behance.net/gallery/37843243/HoustonTranecom-Web-Design" target="_blank"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-3.jpg" alt="Project 3"></a>
 								<div class="caption text-center">
-										<h3>Project 5</h3>										
+										<h3>Houston Web</h3>										
+								</div>
+							</div>
+
+							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+								<a href="https://www.behance.net/gallery/37842653/DIGITAL-EmailE-BlastE-Newsletter-Design" target="_blank"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-4.jpg" alt="Project 4"></a>
+								<div class="caption text-center">
+										<h3>E-Blast Designs</h3>										
+								</div>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+								<a href="https://www.behance.net/gallery/40282069/DIGITAL-Landing-Pages" target="_blank"><img class="img-responsive" id="projImg" src="assets/images/portfolio-image-5.jpg" alt="Project 5"></a>
+								<div class="caption text-center">
+										<h3>Landing Pages</h3>										
 								</div>
 							</div>
 						</div>
