--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 								<label for="message">Message</label>
 								<textarea class="form-control" rows="5" id="message" placeholder="Tell me what you think of my portfolio page!"></textarea>
 							</div>
-							<button type="submit" class="btn btn-default">Submit</button>
+							<button type="submit" class="btn btn-default" id="submitBtn">Submit</button>
 						</form>						
 					</div>
 				</div>
